Added header bar
Show hide header bar based on tab

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,17 +1,14 @@
 <ion-tabs class="tabs-icon-top tabs-positive">
-
-
-
         <ion-tab title="Home" icon="ion-home" href="#/tab/home">
-			<div class="ourCustomHeader">
-				<h1>Teset</h1>
-				<h1>Teset</h1>
-				<h1>Teset</h1>
-				<h1>Teset</h1>
-				<h1>Teset</h1>
-				<h1>Teset</h1>
-				<h1>Teset</h1>
-			</div>
+  			   <ion-header-bar align-title="left" class="bar-calm">
+            <!--<div class="buttons">
+              <button class="button" ng-click="doSomething()">Kompair</button>
+            </div>-->
+            <h1 class="title">Kompair</h1>
+            <div class="buttons">
+              <button class="button button-energized">Login</button>
+            </div>
+          </ion-header-bar>
           <ion-nav-view name="home-tab"></ion-nav-view>
         </ion-tab>
 
