--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,44 @@
-/* Empty. Add your own CSS if you like */
+div {
+    /*border: 1px solid rgba(0,0,0,0.1);*/
+    box-sizing: border-box;
+}
+
+/* Common */
+.AlignCenter {
+    text-align: center;
+}
+
+.BoldItalic{
+	font-weight: bold;
+	font-style: italic;
+}
+
+.Kom_Border{
+	border-radius: 3px;
+	border: 1px solid rgba(0,0,0,0.4);
+}
+
+.Kom_BorderBottom{
+	border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.InfoBox{
+	border: 1px dashed black;
+	color: red;
+}
+/*  Search Result */
+.SR_QuestionHeader{
+	padding: 3px;
+	font-size: 20px;
+}
+
+.SR_AnswerSectionBottom{
+	border: 1px solid rgba(0,0,0,0.1);
+}
+
+/* Edit Section */
+.ES_QuestionHeader{
+	padding: 3px;
+	font-size: 14px;
+}
+
