--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,10 +1,9 @@
 <ion-view view-title="About">
         <ion-content class="padding">
-          <h3>Create hybrid mobile apps with the web technologies you love.</h3>
-          <p>Free and open source, Ionic offers a library of mobile-optimized HTML, CSS and JS components for building highly interactive apps.</p>
-          <p>Built with Sass and optimized for AngularJS.</p>
-          <p>
-            <a class="button icon icon-right ion-chevron-right" href="#/tab/navstack">Tabs Nav Stack</a>
+          <h3 align="center">Komapir!</h3>
+          <p>Just some guys making the next great thing to come to your phones!</p>
+          <p align="center">
+            <a class="button icon icon-right ion-chevron-right" href="#/tab/contact">Contact Us!</a>
           </p>
         </ion-content>
       </ion-view>
