--- a/www/templates/answer2.html
+++ b/www/templates/answer2.html
@@ -69,7 +69,7 @@
 	    			</div>
 	    		</div>
 	    		<div class="row">
-	    			<button class="col button button-small ion ion-plus-circled"></button>
+	    			<a class="col button button-small ion ion-plus-circled" href="#tab/new"></a>
 	    		</div>
 	    		<div class="row">
 	    			<button class="button button-small button-calm BoldItalic col">Update</button>
