--- a/www/templates/contact.html
+++ b/www/templates/contact.html
@@ -2,10 +2,13 @@
         <ion-content>
           <div class="list">
             <div class="item">
-              @IonicFramework
+              Mahesh Sasidharan
             </div>
             <div class="item">
-              @DriftyTeam
+              Colin Kenney
+            </div>
+            <div class="item">
+              Josh Kinney
             </div>
           </div>
         </ion-content>
