--- a/www/templates/facts.html
+++ b/www/templates/facts.html
@@ -1,8 +1,111 @@
 <ion-view view-title="Facts">
-        <ion-content class="padding">
-          <p>
-            <a class="button icon ion-home" href="#/tab/home"> Home</a>
-            <a class="button icon icon-right ion-chevron-right" href="#/tab/facts2">More Facts</a>
-          </p>
-        </ion-content>
-      </ion-view>
+	<ion-content class="padding">
+	    <div class="SR_container">
+	    	<div class="SR_AnswerSection">
+	    		<div class="SR_AnswerSectionTop row">
+		    		<div class="SR_IconSection col col-33 Kom_Border">
+		    			<div class="row">
+			    			<div>
+			    				<div class="AlignCenter">6</div>
+			    				<div>
+			    					<a class="button button-icon icon ion-ios-star col" href="#/tab/facts2"></a>
+			    				</div>
+			    			</div>
+			    			<div>
+			    				<div class="AlignCenter">6</div>
+			    				<div>
+			    					<a class="button button-icon icon ion-android-locate col" href="#/tab/home"></a>
+			    				</div>
+			    			</div>
+			    			<div>
+			    				<div class="AlignCenter">6</div>
+			    				<div>
+			    					<a class="button button-icon icon ion-eye col"></a>
+			    				</div>
+			    			</div>
+		    			</div>
+		    		</div>
+		    		<div class="SR_QuestionSection col col-67 Kom_Border">
+		    			<div class="SR_QuestionHeader">Apple versus Questions</div>
+		    			<div class="row row-bottom">
+		    				<button class="button button-small button-outline button-positive BoldItalic">Fruit</button>
+		    			</div>
+		    		</div>
+	    		</div>
+	    		<div class="SR_AnswerSectionBottom">
+	    			<div class="row Kom_BorderBottom">
+	    				<div class="col col-33">
+	    				<div class="row">
+	    					<div>
+		    					<a class="button button-icon icon ion-thumbsup col" href="#/tab/facts2"></a>
+		    				</div>
+		    				<div>
+		    					<a class="button button-icon icon ion-thumbsdown col" href="#/tab/facts2"></a>
+		    				</div>
+		    			</div>
+	    				</div>
+	    				<div class="col col-67">
+	    					<div class="row">
+		    					<h4 class="col">Apple</h4>
+		    					<h4 class="col">Orange</h4>
+	    					</div>
+	    				</div>
+	    			</div>
+	    			<div class="row row-center Kom_BorderBottom">
+	    				<div class="col col-33">Scientific</div>
+	    				<div class="col col-67">
+	    					<div class="row">
+		    					<div class="col">This is some text about Apple</div>
+		    					<div class="col">This is some text about Orange</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    			<div class="row row-center Kom_BorderBottom">
+	    				<div class="col col-33">Nutrients</div>
+	    				<div class="col col-67">
+	    					<div class="row">
+		    					<div class="col">
+		    						<ul style="list-style-type:circle">
+		    							<li>Aplha</li>
+		    							<li>Beta</li>
+		    							<li>Gamma</li>
+		    						</ul>
+		    					</div>
+		    					<div class="col">
+		    						<ul style="list-style-type:circle">
+		    							<li>Delta</li>
+		    							<li>Theta</li>
+		    							<li>Omega</li>
+		    						</ul>
+		    					</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    			<div class="row row-center Kom_BorderBottom">
+	    				<div class="col col-33">Physical</div>
+	    				<div class="col col-67">
+	    					<div class="row">
+		    					<div class="col">
+		    						<ul style="list-style-type:disc">
+		    							<li>0.5 lbs</li>
+		    							<li>6 cms</li>
+		    						</ul>
+		    					</div>
+		    					<div class="col">
+		    						<ul style="list-style-type:disc">
+		    							<li>0.76 lbs</li>
+		    							<li>5.3 cms</li>
+		    						</ul>
+		    					</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+	    		<div class="row">
+	    			<button class="button button-small button-balanced BoldItalic col">Add More</button>
+	    			<a class="button button-small button-energized BoldItalic col" href="#/tab/facts2">Edit</a>
+	    		</div>
+	    	</div>
+	    </div>
+	</ion-content>
+</ion-view>
