--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,9 +1,21 @@
-
-
 <ion-view view-title="Home">
 	<ion-content class="padding">
-		<p class="has-header">
-		   <a class="button icon icon-right ion-chevron-right" href="#/tab/facts">Scientific Facts</a>
-		</p>
+                <label class="item item-input">
+                    <i class="icon ion-search placeholder-icon"></i>
+                    <input type="search" placeholder="Search">
+                </label>
+                <p align="center" class="padding">
+                    <a class="button button-energized" href="#/tab/results">Submit</a>
+                </p>
+
+                <div class="button-bar">
+                    <a class="button button-energized">Catagories</a>
+                    <a class="button button-energized" href="#/tab/facts">Hot Compare!</a>
+                </div>
+
+                <div class="button-bar">
+                    <a class="button button-energized">Ask Comapre</a>
+                    <a class="button button-energized">Answer</a>
+                </div>
 	</ion-content>
 </ion-view>
