--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,22 +1,18 @@
 <ion-tabs class="tabs-icon-top tabs-positive">
         <ion-tab title="Home" icon="ion-home" href="#/tab/home">
-  			   <ion-header-bar align-title="left" class="bar-calm">
+  		    <ion-header-bar align-title="left" class="bar-calm">
             <!--<div class="buttons">
               <button class="button" ng-click="doSomething()">Kompair</button>
             </div>-->
-            <h1 class="title">Kompair</h1>
-            <div class="buttons">
-              <button class="button button-energized">Login</button>
-            </div>
-          </ion-header-bar>
+                <h1 class="title">Kompair</h1>
+                <div class="buttons">
+                  <a class="button button-energized" href="#/tab/logged_in_home">Login</a>
+                </div>
+            </ion-header-bar>
           <ion-nav-view name="home-tab"></ion-nav-view>
         </ion-tab>
 
         <ion-tab title="About" icon="ion-ios-information" href="#/tab/about">
-        <h1>THis is about page</h1>
-        <h1>THis is about page</h1>
-        <h1>THis is about page</h1>
-        <h1>THis is about page</h1>
           <ion-nav-view name="about-tab"></ion-nav-view>
         </ion-tab>
 
