Added views in correct format

--- a/www/templates/contact.html
+++ b/www/templates/contact.html
@@ -2,13 +2,10 @@
         <ion-content>
           <div class="list">
             <div class="item">
-              Mahesh Sasidharan
+              @IonicFramework
             </div>
             <div class="item">
-              Colin Kenney
-            </div>
-            <div class="item">
-              Josh Kinney
+              @DriftyTeam
             </div>
           </div>
         </ion-content>
