--- a/www/templates/kompair/compare.html
+++ b/www/templates/kompair/compare.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Facts">
+<ion-view view-title="Compare">
     <ion-content class="padding">
         <div class="SR_container">
             <div class="SR_AnswerSection">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="row">
                     <button class="button button-small button-balanced BoldItalic col">Add More</button>
-                    <a class="button button-small button-energized BoldItalic col" href="#tab/answer2">Edit</a>
+                    <a class="button button-small button-energized BoldItalic col" ui-sref="kompair.edit">Edit</a>
                 </div>
             </div>
         </div>
