--- a/www/templates/kompair/edit.html
+++ b/www/templates/kompair/edit.html
@@ -73,7 +73,7 @@
 	    		</div>
 	    		<div class="row">
 	    			<button class="button button-small button-calm BoldItalic col">Update</button>
-	    			<button class="button button-small button-assertive BoldItalic col">Cancel</button>
+	    			<button class="button button-small button-assertive BoldItalic col"  ui-sref="kompair.compare">Cancel</button>
 	    		</div>
 	    	</div>
 	    </div>
