--- a/www/templates/kompair/results.html
+++ b/www/templates/kompair/results.html
@@ -23,7 +23,7 @@
                             <div class="SR_QuestionHeader">Apple vs Questions</div>
                             <div class="row row-bottom">
                                 <button class="button button-small button-outline button-positive BoldItalic">Fruit</button>
-                                <a class="button button-small button-outline button-positive button-icon ion-arrow-right-c BoldItalic" href="#tab/answer"></a>
+                                <a class="button button-small button-outline button-positive button-icon ion-arrow-right-c BoldItalic"  ui-sref="kompair.compare"></a>
                             </div>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <div class="SR_QuestionHeader">Apple vs Questions</div>
                         <div class="row row-bottom">
                             <button class="button button-small button-outline button-positive BoldItalic">Fruit</button>
-                            <a class="button button-small button-outline button-positive button-icon ion-arrow-right-c BoldItalic" href="#tab/answer"></a>
+                            <a class="button button-small button-outline button-positive button-icon ion-arrow-right-c BoldItalic" ui-sref="kompair.compare"></a>
                         </div>
                     </div>
                 </div>
