--- a/www/templates/tab/headerFooter.html
+++ b/www/templates/tab/headerFooter.html
@@ -1,6 +1,12 @@
 <ion-header-bar align-title="left" class="bar-calm">
-	<h1 class="title">Kompair</h1>
-	<div class="buttons">
-	  <button class="button button-energized">Login</button>
-	</div>
+    <h1 class="title">Kompair</h1>
+    <div class="buttons">
+        <a class="button button-energized" ng-click="vm.SignIn()">Login</a>
+    </div>
 </ion-header-bar>
+<!-- <div align-title="left" class="bar-calm">
+    <h1 class="title">Kompair</h1>
+    <div class="buttons">
+        <a class="button button-energized" ng-click="vm.SignIn()">Login</a>
+    </div>
+</div> -->
