--- a/www/templates/base/home.html
+++ b/www/templates/base/home.html
@@ -1,19 +1,22 @@
 <ion-view view-title="Home">
-	<ion-content class="padding">
-        <label class="item item-input">
-            <i class="icon ion-search placeholder-icon"></i>
-            <input type="search" placeholder="Search">
-        </label>
-        <p align="center" class="padding">
-            <a class="button button-energized" href="#/tab/results">Submit</a>
-        </p>
-        <div class="button-bar">
-            <a class="button button-energized">Catagories</a>
-            <a class="button button-energized" href="#/tab/facts">Hot Compare!</a>
+    <ion-content class="padding">
+        <div>
+            <label class="item item-input">
+                <i class="icon ion-search placeholder-icon"></i>
+                <input type="search" placeholder="Search">
+            </label>
+
+            <p align="center" class="padding">
+                <a class="button button-energized" href="#/results">Submit</a>
+            </p>
+
+            <button class="button button-block button-energized">Your Question</button>
+
+            <button class="button button-block button-energized">Your Answer</button>
+
+            <button class="button button-block button-energized">Your Account</button>
+
+            <button class="button button-block button-energized">Edit Account</button>
         </div>
-        <div class="button-bar">
-            <a class="button button-energized">Ask Comapre</a>
-            <a class="button button-energized">Answer</a>
-        </div>
-	</ion-content>
+    </ion-content>
 </ion-view>
