--- a/www/templates/kompair/results.html
+++ b/www/templates/kompair/results.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Facts">
+<ion-view view-title="Compare Results">
     <ion-content>
         <ion-list>
             <ion-item ng-repeat="result in res.arrResults">
@@ -29,9 +29,10 @@
                             <div class="SR_QuestionHeader">{{result.title}}</div>
                             <div class="row row-bottom">
                                 <button class="button button-small button-outline button-positive BoldItalic"
-                                    ng-repeat="cat in result.arrCategories">
+                                    ng-repeat="cat in result.arrCategories | limitTo:3 track by $index">
                                 {{cat}}
                                 </button>
+                                <span ng-show="result.arrCategories.length > 3">&nbsp...</span>
                             </div>
                         </div>
                     </div>
