Disable unauthorized edits

--- a/www/templates/kompair/compare.html
+++ b/www/templates/kompair/compare.html
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" ng-show="vm.oShared.bSingedIn">
                     <a class="button button-small button-energized BoldItalic col" ui-sref="kompair.edit">Edit</a>
                 </div>
             </div>
