--- a/www/templates/base/home.html
+++ b/www/templates/base/home.html
@@ -5,18 +5,15 @@
                 <i class="icon ion-search placeholder-icon"></i>
                 <input type="search" placeholder="Search">
             </label>
-
             <p align="center" class="padding">
                 <a class="button button-energized" href="#/results">Submit</a>
             </p>
-
-            <button class="button button-block button-energized">Your Question</button>
-
-            <button class="button button-block button-energized">Your Answer</button>
-
-            <button class="button button-block button-energized">Your Account</button>
-
-            <button class="button button-block button-energized">Edit Account</button>
+            <div ng-show="vm.oShared.bSingedIn">
+                <button class="button button-block button-energized">Your Question</button>
+                <button class="button button-block button-energized">Your Answer</button>
+                <button class="button button-block button-energized">Your Account</button>
+                <button class="button button-block button-energized">Edit Account</button>
+            </div>
         </div>
     </ion-content>
 </ion-view>
