--- a/www/templates/tab/headerFooter.html
+++ b/www/templates/tab/headerFooter.html
@@ -2,6 +2,6 @@
     <h1 class="title">Kompair</h1>
     <div class="buttons">
         <a ng-show="!vm.oShared.bSingedIn" class="button button-energized" ng-click="vm.SignIn_dummy()" ui-sref="kompair.login">Login</a>
-        <label class="Kom_LoggedUserName" ng-show="vm.oShared.bSingedIn">{{vm.oShared.sSignedInUserId}}</label>
+        <label ng-show="vm.oShared.bSingedIn" class="Kom_LoggedUserName">{{vm.oShared.sSignedInUserId}}</label>
     </div>
 </ion-header-bar>
