Added saving user data

--- a/www/templates/base/tabs.html
+++ b/www/templates/base/tabs.html
@@ -6,7 +6,7 @@
     <ion-tab title="About" icon="ion-ios-information" ui-sref="kompair.about">
         <ion-nav-view name="about-tab"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Login" icon="ion-ios-world" ui-sref="kompair.login">
+    <ion-tab title="{{main.DisplayName}}" icon="ion-ios-world" ui-sref="kompair.login">
         <ion-nav-view name="contact-tab"></ion-nav-view>
     </ion-tab>
 </ion-tabs>
