--- a/www/templates/kompair/login.html
+++ b/www/templates/kompair/login.html
@@ -12,13 +12,12 @@
                 <span class="input-label">Password</span>
                 <input type="password" ng-model="lo.user.password">
             </label>
-            <button class="button button-full button-energized" ng-click="lo.SignIn()"
-            ng-disabled='!lo.user.email || lo.user.email == ""|| !lo.user.password || lo.user.password == ""'>
-            Submit
+            <button class="button button-full button-energized" ng-click="lo.SignIn()" ng-disabled='!lo.user.email || lo.user.email == ""|| !lo.user.password || lo.user.password == ""'>
+                Submit
             </button>
             <div align="center">
                 <button class="button button-full button-calm" ui-sref="kompair.signup" align="center">
-                Sign Up!
+                    Sign Up!
                 </button>
             </div>
             <div align="center">
@@ -27,6 +26,9 @@
                 </button>
             </div>
             <h3 class="text-center assertive">{{ lo.sErrorMessage }}</h3>
+            <button class="button button-full button-primary" ng-click="lo.UpdateUserDetails('ABCDE')" align="center">
+                Update display name
+            </button>
         </div>
     </ion-content>
 </ion-view>
