Added search, add user details and update user info

--- a/www/templates/kompair/editaccount.html
+++ b/www/templates/kompair/editaccount.html
@@ -12,6 +12,15 @@
                 <button class="button button-energized" ng-click="eda.UpdateEmailAddress()">Update Email</button>
             </div>
 
+            <h3 align="center">Update Display Name</h3>
+            <label class="item item-input">
+                <span class="input-label text-center">New Display Name:</span>
+                <input type="text" ng-model="eda.displayName">
+            </label>
+            <div align="center" class="padding">
+                <button class="button button-energized" ng-click="eda.UpdateDisplayName()">Update Name</button>
+            </div>
+
             <h3 align="center">Update Password</h3>
             <label class="item item-input">
                 <span class="input-label text-center">New Password:</span>
