--- a/www/templates/base/home.html
+++ b/www/templates/base/home.html
@@ -3,7 +3,7 @@
         <div>
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
-                <input type="search" placeholder="Search">
+                <input type="search" ng-model="vm.oShared.oSearch.sSearchTerms" placeholder="Search">
             </label>
             <p align="center" class="padding">
                 <a class="button button-energized" href="#/results">Submit</a>
