--- a/www/templates/base/home.html
+++ b/www/templates/base/home.html
@@ -9,7 +9,7 @@
                 <a class="button button-energized" href="#/results">Submit</a>
             </p>
             <div ng-show="vm.oShared.bSingedIn">
-                <button class="button button-block button-energized">Your Question</button>
+                <a class="button button-block button-energized" ui-sref="kompair.yourQ">Your Question</a>
                 <a class="button button-block button-energized" ui-sref="kompair.editaccount">Account</a>
                 <p align="center" class="padding">
                     <a class="button button-energized" ng-click="vm.LogOut()">Logout</a>
